docs: 将 JVM 9 的文档内容替换为 JVM 12 的内容